// Copyright 2026 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package spanner.cloud.location;

import "google/protobuf/struct.proto";
import "google/spanner/v1/keys.proto";
import "google/spanner/v1/location.proto";
import "google/spanner/v1/mutation.proto";

option java_multiple_files = true;

// Proto definition for the textproto of tests.
message RecipeTestCases {
  repeated RecipeTestCase test_case = 1;
}

message RecipeTestCase {
  // Name of the test case, for diagnostic purposes.
  string name = 1;

  // A list of recipes to be used to evaluate the tests below.
  google.spanner.v1.RecipeList recipes = 2;

  message Test {
    // Each test encodes a single operation.
    oneof operation {
      google.protobuf.ListValue key = 1;
      google.spanner.v1.KeyRange key_range = 2;
      google.spanner.v1.KeySet key_set = 3;
      google.spanner.v1.Mutation mutation = 4;
      google.protobuf.Struct query_params = 5;
    }

    // `start`, `limit`, and `approximate` are the expected results of encoding.
    bytes start = 6;
    bytes limit = 7;
    bool approximate = 8;
  }
  repeated Test test = 3;
}
